使用 Colab 创建而成

--- a/nb/Llama3.2_(1B_and_3B)-Conversational.ipynb
+++ b/nb/Llama3.2_(1B_and_3B)-Conversational.ipynb
@@ -3,27 +3,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s1PZnLubpYf1"
+        "id": "oxoC638Bs00O"
       },
       "source": [
-        "要在**免费** Tesla T4 Google Colab 实例上运行此程序，请按“*运行时*”，然后按“*全部运行*”！\n",
+        "To run this, press \"*Runtime*\" and press \"*Run all*\" on a **free** Tesla T4 Google Colab instance!\n",
         "<div class=\"align-center\">\n",
         "<a href=\"https://unsloth.ai/\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/unsloth%20new%20logo.png\" width=\"115\"></a>\n",
         "<a href=\"https://discord.gg/unsloth\"><img src=\"https://github.com/unslothai/unsloth/raw/main/images/Discord button.png\" width=\"145\"></a>\n",
-        "<a href=\"https://docs.unsloth.ai/\"><img src=\"https://github.com/unslothai/unsloth/blob/main/images/documentation%20green%20button.png?raw=true\" width=\"125\"></a></a> 如果您需要帮助，请加入 Discord + ⭐ <i>在 <a href=\"https://github.com/unslothai/unsloth\">Github</a> 上给我们点赞</i> ⭐\n",
+        "<a href=\"https://docs.unsloth.ai/\"><img src=\"https://github.com/unslothai/unsloth/blob/main/images/documentation%20green%20button.png?raw=true\" width=\"125\"></a></a> Join Discord if you need help + ⭐ <i>Star us on <a href=\"https://github.com/unslothai/unsloth\">Github</a> </i> ⭐\n",
         "</div>\n",
         "\n",
-        "要在您自己的计算机上安装 Unsloth，请按照我们 Github 页面[此处](https://docs.unsloth.ai/get-started/installing-+-updating)上的安装说明进行操作。\n",
+        "To install Unsloth on your own computer, follow the installation instructions on our Github page [here](https://docs.unsloth.ai/get-started/installing-+-updating).\n",
         "\n",
-        "您将学习如何进行[数据准备](#Data)、如何[训练](#Train)、如何[运行模型](#Inference)以及[如何保存模型](#Save)\n",
+        "You will learn how to do [data prep](#Data), how to [train](#Train), how to [run the model](#Inference), & [how to save it](#Save)\n",
         "\n",
-        "访问我们的文档以获取所有[模型上传](https://docs.unsloth.ai/get-started/all-our-models)和[笔记本](https://docs.unsloth.ai/get-started/unsloth-notebooks)。\n"
+        "Visit our docs for all our [model uploads](https://docs.unsloth.ai/get-started/all-our-models) and [notebooks](https://docs.unsloth.ai/get-started/unsloth-notebooks).\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oa0J01iWpYf2"
+        "id": "EOmQ-iIUs00Q"
       },
       "source": [
         "### News"
@@ -32,18 +32,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rH4dzDERpYf2"
+        "id": "L66kysfls00Q"
       },
       "source": [
-        "**阅读我们的[博客文章](https://unsloth.ai/blog/r1-reasoning)以获取训练推理模型的指导。** GRPO 笔记本的灵感来自[@shxf0072](https://x.com/shxf0072/status/1886085377146180091), [@Teknium1](https://x.com/Teknium1/status/1885077369142337550), [@willccbb](https://gist.github.com/willccbb/4676755236bb08cab5f4e54a0475d6fb)\n",
+        "**Read our [blog post](https://unsloth.ai/blog/r1-reasoning) for guidance to train reasoning model.** GRPO notebook is inspired by [@shxf0072](https://x.com/shxf0072/status/1886085377146180091), [@Teknium1](https://x.com/Teknium1/status/1885077369142337550), [@willccbb](https://gist.github.com/willccbb/4676755236bb08cab5f4e54a0475d6fb)\n",
         "\n",
-        "访问我们的文档以获取所有[模型上传](https://docs.unsloth.ai/get-started/all-our-models)和[笔记本](https://docs.unsloth.ai/get-started/unsloth-notebooks)。\n"
+        "Visit our docs for all our [model uploads](https://docs.unsloth.ai/get-started/all-our-models) and [notebooks](https://docs.unsloth.ai/get-started/unsloth-notebooks).\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4SkpbUzapYf2"
+        "id": "koBlpBtOs00Q"
       },
       "source": [
         "### Installation"
@@ -53,15 +53,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EE108oQwpYf3"
+        "id": "GlIc4JdFs00Q"
       },
       "outputs": [],
       "source": [
         "%%capture\n",
-        "# 通常，使用 pip install unsloth 就足够了\n",
+        "# Normally using pip install unsloth is enough\n",
         "\n",
-        "# 截至 2025 年 1 月 31 日，Colab 在使用 Pytorch 时存在一些问题\n",
-        "# 使用 pip install unsloth 需要 3 分钟，而以下方法需要不到 1 分钟：\n",
+        "# Temporarily as of Jan 31st 2025, Colab has some issues with Pytorch\n",
+        "# Using pip install unsloth will take 3 minutes, whilst the below takes <1 minute:\n",
         "!pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
         "!pip install --no-deps cut_cross_entropy unsloth_zoo\n",
         "!pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
@@ -71,7 +71,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QdJ5IyAxpYf3"
+        "id": "hzr1rKL5s00R"
       },
       "source": [
         "### Unsloth"
@@ -81,17 +81,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "c8vrPKkZpYf3"
+        "id": "B9PCXjIns00R"
       },
       "outputs": [],
       "source": [
         "from unsloth import FastLanguageModel\n",
         "import torch\n",
-        "max_seq_length = 2048 # 可选择任意值！我们内部自动支持 RoPE 缩放！\n",
-        "dtype = None # 自动检测为 None。Tesla T4、V100 为 Float16，Ampere+ 为 Bfloat16\n",
-        "load_in_4bit = True # 使用 4 位量化以减少内存使用。可以为 False。\n",
+        "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
+        "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+        "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
         "\n",
-        "# 我们支持的 4 位预量化模型，下载速度提高 4 倍 + 无 OOM。\n",
+        "# 4bit pre quantized models we support for 4x faster downloading + no OOMs.\n",
         "fourbit_models = [\n",
         "    \"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",      # Llama-3.1 2x faster\n",
         "    \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\",\n",
@@ -152,17 +152,17 @@
       "source": [
         "model = FastLanguageModel.get_peft_model(\n",
         "    model,\n",
-        "    r = 16, # 选择任何大于 0 的数字！建议 8、16、32、64、128\n",
+        "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
         "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
         "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
         "    lora_alpha = 16,\n",
-        "    lora_dropout = 0, # 支持任何值，但 = 0 已优化\n",
-        "    bias = \"none\",    # 支持任何值，但 = \"none\" 已优化\n",
-        "    # [新增] \"unsloth\" 使用的 VRAM 减少 30%，适合 2 倍大的批量大小！\n",
-        "    use_gradient_checkpointing = \"unsloth\", # 对于非常长的上下文，使用 True 或 \"unsloth\"\n",
+        "    lora_dropout = 0, # Supports any, but = 0 is optimized\n",
+        "    bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
+        "    # [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\n",
+        "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
         "    random_state = 3407,\n",
-        "    use_rslora = False,  # 我们支持秩稳定 LoRA\n",
-        "    loftq_config = None, # 以及 LoftQ\n",
+        "    use_rslora = False,  # We support rank stabilized LoRA\n",
+        "    loftq_config = None, # And LoftQ\n",
         ")"
       ]
     },
@@ -172,9 +172,9 @@
         "id": "vITh0KVJ10qX"
       },
       "source": [
-        "<a name=\"数据\"></a>\n",
-        "### 数据准备\n",
-        "我们现在使用 `Llama-3.1` 格式进行对话风格的微调。我们使用 [Maxime Labonne 的 FineTome-100k](https://huggingface.co/datasets/mlabonne/FineTome-100k) 数据集，采用 ShareGPT 风格。但我们将其转换为 HuggingFace 的普通多轮对话格式 `(\"role\", \"content\")`，而不是 `(\"from\", \"value\")` / Llama-3 渲染多轮对话如下：\n",
+        "<a name=\"Data\"></a>\n",
+        "### Data Prep\n",
+        "We now use the `Llama-3.1` format for conversation style finetunes. We use [Maxime Labonne's FineTome-100k](https://huggingface.co/datasets/mlabonne/FineTome-100k) dataset in ShareGPT style. But we convert it to HuggingFace's normal multiturn format `(\"role\", \"content\")` instead of `(\"from\", \"value\")`/ Llama-3 renders multi turn conversations like below:\n",
         "\n",
         "```\n",
         "<|begin_of_text|><|start_header_id|>user<|end_header_id|>\n",
@@ -186,7 +186,7 @@
         "I'm great thanks!<|eot_id|>\n",
         "```\n",
         "\n",
-        "我们使用 `get_chat_template` 函数来获取正确的聊天模板。我们支持 `zephyr, chatml, mistral, llama, alpaca, vicuna, vicuna_old, phi3, llama3` 等。"
+        "We use our `get_chat_template` function to get the correct chat template. We support `zephyr, chatml, mistral, llama, alpaca, vicuna, vicuna_old, phi3, llama3` and more."
       ]
     },
     {
@@ -303,7 +303,7 @@
         "id": "K9CBpiISFa6C"
       },
       "source": [
-        "我们现在使用 `standardize_sharegpt` 将 ShareGPT 样式的数据集转换为 HuggingFace 的通用格式。这会将数据集从以下样式更改为：\n",
+        "We now use `standardize_sharegpt` to convert ShareGPT style datasets into HuggingFace's generic format. This changes the dataset from looking like:\n",
         "```\n",
         "{\"from\": \"system\", \"value\": \"You are an assistant\"}\n",
         "{\"from\": \"human\", \"value\": \"What is 2+2?\"}\n",
@@ -1392,7 +1392,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "jZYO0mlQpYf9"
+        "id": "9dq2_pxNs00X"
       },
       "source": [
         "Now, use the `model-unsloth.gguf` file or `model-unsloth-Q4_K_M.gguf` file in llama.cpp or a UI based system like Jan or Open WebUI. You can install Jan [here](https://github.com/janhq/jan) and Open WebUI [here](https://github.com/open-webui/open-webui)\n",
